--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -70,6 +70,12 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut excepturi iusto voluptas nesciunt. Accusantium, sed consequuntur Quas architecto sed quibusdam magni? Facere accusamus fugiat nam.
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum aliquam a aliquid quis recusandae inventore quo laudantium consequuntur, tempore ratione aperiam minus officiis nostrum obcaecati?
             </p>
+            <div class="education">
+                <h3>Education</h3>
+                <ul>
+                    <li>Twelve</li>
+                </ul>
+            </div>
             <a href="#" class="about-content-more">Read More</a>
         </div>
     </section>
