--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -74,6 +74,7 @@
                 <h3>Education</h3>
                 <ul>
                     <li>Twelve</li>
+                    <li>Python with Django</li>
                 </ul>
             </div>
             <a href="#" class="about-content-more">Read More</a>
